--- a/index.html
+++ b/index.html
@@ -3,82 +3,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Uzair Rehman - Computer Engineer</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f8f8f8;
-            color: #333;
-            margin: 0;
-            padding: 0;
-        }
-        .header {
-            background-color: #ff6666;
-            color: white;
-            padding: 20px;
-            text-align: center;
-        }
-        .container {
-            padding: 20px;
-        }
-        .section {
-            margin-bottom: 40px;
-        }
-        .skills {
-            list-style-type: none;
-            padding: 0;
-        }
-        .skills li {
-            background-color: #66b2ff;
-            color: white;
-            padding: 10px;
-            margin: 5px 0;
-            border-radius: 5px;
-        }
-        .contact {
-            background-color: #ff6666;
-            color: white;
-            padding: 10px;
-            text-align: center;
-            border-radius: 5px;
-        }
-        .contact a {
-            color: white;
-            text-decoration: none;
-        }
-    </style>
+    <title>Uzair Rehman's Portfolio</title>
 </head>
-<body>
+<body style="font-family: Arial, sans-serif; margin: 0; padding: 0;">
 
-    <div class="header">
+    <header style="background-color: #4CAF50; color: white; text-align: center; padding: 20px;">
         <h1>Uzair Rehman</h1>
-        <h2>Computer Engineer</h2>
-    </div>
+        <p>Computer Engineer</p>
+    </header>
 
-    <div class="container">
-        <div class="section">
-            <h2>About Me</h2>
-            <p>Hello! I am Uzair Rehman, a passionate Computer Engineer with expertise in various areas of technology including web 
-development, chip design, DevOps, databases, and C/C++. I enjoy creating innovative solutions and continuously learning new skills to 
-stay updated with the latest trends in the tech industry.</p>
-        </div>
+    <nav style="text-align: center; padding: 10px; background-color: #f2f2f2;">
+        <a href="#about" style="margin: 0 15px; text-decoration: none; color: #333;">About</a>
+        <a href="#skills" style="margin: 0 15px; text-decoration: none; color: #333;">Skills</a>
+        <a href="#achievements" style="margin: 0 15px; text-decoration: none; color: #333;">Achievements</a>
+        <a href="#contact" style="margin: 0 15px; text-decoration: none; color: #333;">Contact</a>
+    </nav>
 
-        <div class="section">
-            <h2>Skills</h2>
-            <ul class="skills">
-                <li>Web Development</li>
-                <li>Chip Design</li>
-                <li>DevOps</li>
-                <li>Databases</li>
-                <li>C/C++</li>
-            </ul>
-        </div>
+    <section id="about" style="padding: 20px;">
+        <h2>About Me</h2>
+        <p>Hello! My name is Uzair Rehman. I am a computer engineer graduated from Ghulam Ishaq Khan Institute of Engineering Sciences 
+and Technology. I specialize in databases, C/C++ programming, DevOps, web development, and AI/ML.</p>
+    </section>
 
-        <div class="section contact">
-            <h2>Contact Me</h2>
-            <p>You can reach me at: <a href="mailto:uzair@example.com">uzair@example.com</a></p>
-        </div>
-    </div>
+    <section id="skills" style="padding: 20px; background-color: #f9f9f9;">
+        <h2>Skills</h2>
+        <ul>
+            <li><strong>Databases:</strong> Programming, schema design, query optimization</li>
+            <li><strong>Programming:</strong> C/C++</li>
+            <li><strong>DevOps:</strong> CI/CD, Docker, AWS, Terraform, Bash Scripting, CronJobs automation</li>
+            <li><strong>Web Development:</strong> React.js, Node.js</li>
+            <li><strong>AI/ML:</strong> NLP</li>
+        </ul>
+    </section>
+
+    <section id="achievements" style="padding: 20px;">
+        <h2>Achievements</h2>
+        <ul>
+            <li>Certified in AI from Coursera</li>
+            <li>Captain of Team RoboRide</li>
+            <li>Multimedia and Website Officer at IMechE GIK Chapter</li>
+            <li>Certified Graphic Designer from KPITB</li>
+        </ul>
+    </section>
+
+    <footer id="contact" style="background-color: #333; color: white; text-align: center; padding: 20px;">
+        <h2>Contact</h2>
+        <p>Email: uzair.rehman@example.com</p>
+        <p>LinkedIn: <a href="https://www.linkedin.com/in/uzairrehman" style="color: #4CAF50;">linkedin.com/in/uzairrehman</a></p>
+    </footer>
 
 </body>
 </html>
