--- a/index.html
+++ b/index.html
@@ -48,8 +48,9 @@ and Technology. I specialize in databases, C/C++ programming, DevOps, web develo
 
     <footer id="contact" style="background-color: #333; color: white; text-align: center; padding: 20px;">
         <h2>Contact</h2>
-        <p>Email: uzair.rehman@example.com</p>
-        <p>LinkedIn: <a href="https://www.linkedin.com/in/uzairrehman" style="color: #4CAF50;">linkedin.com/in/uzairrehman</a></p>
+        <p>Email: uzair.rehmann@gmail.com</p>
+        <p>LinkedIn: <a href="https://www.linkedin.com/in/uzairrehmanyousafzai" style="color: 
+#4CAF50;">linkedin.com/in/uzairrehman</a></p>
     </footer>
 
 </body>
